# ft-allowance-agent

./: .gitignore  README.md
0.0.1/: .env  README.md  agent.py  metadata.json  requirements.txt
0.0.1/src/: Cargo.toml  auth_proxy.rs  build.sh  random_approach.py  test.sh  test_random_approach.py  utils.py
0.0.1/src/tests/: proxy_test.rs
bitte-agent/: README.md  package.json
bitte-agent/src/: config.js
bitte-agent/src/app/: page.tsx
bitte-agent/src/app/api/ai-plugin/: route.ts
bitte-agent/src/app/api/tools/create-allowance/: route.ts
bitte-agent/src/app/api/tools/get-balance/: route.ts
bitte-agent/src/app/api/tools/remove-allowance/: route.ts
bitte-agent/src/utils/: getQuotes.js
bitte-agent/src/wallets/: intents.js  near.js  web3modal.js
