[package]
name = "proxy-contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "proxy_contract"
path = "auth_proxy.rs"

[dependencies]
near-sdk = {version = "5.5.0", features = ["unit-testing"] }
near-contract-standards = "5.5.0"
near-gas = "0.3.0"
borsh = "1.5.1"
serde = { version = "1.0.214", features = ["derive"] }
omni-transaction = "0.2.0"
sha2 = "0.10.8"


[dev-dependencies]
near-workspaces = "0.16.0"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
anyhow = "1.0"
